--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ h2{
 .rodape{
     color: var(--cor-primaria);
     background-color: var(--cor-tercearia);
-    padding: 24px;
+    padding: 1.5rem;
     text-align: center;
     font-weight: 800;
     font-size: 1.5rem;
@@ -108,7 +108,7 @@ h2{
     
 }
 .rodape_contato img{
-    width: 30px;        /* Ajuste da largura */
+    width: 3%;        /* Ajuste da largura */
     height: auto;        /* Mantém a proporção da imagem */
     margin-right: 1px;
     margin-left: 20px;
