--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    margin-bottom: 0px;
+    
 }
 .cabecalho{
     padding: 2% 0% 0% 15% ;
@@ -40,7 +42,7 @@ body{
 
 
 .apresentacao{
-    
+    padding: 1% 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
